--- a/src/App.css
+++ b/src/App.css
@@ -176,7 +176,7 @@ img {
 .filter label {
   display: inline-block;
   color: var(--gray);
-  width: 10rem;
+  width: 12rem;
   
 }
 .filter input, .filter select {
@@ -184,7 +184,7 @@ img {
   padding: 0.2rem 0.4rem;
   border-radius: 6px;
   border: 1px solid var(--gray);
-  min-width: 10rem;
+  min-width: 12rem;
 }
 
 
@@ -237,7 +237,8 @@ img {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-  margin: 0.5rem 0;
+  max-width: 100%;
+  /* margin: 0.5rem 0; */
 }
 
 .match-setup .counter .counter-btn {
@@ -279,7 +280,7 @@ img {
 
 /* Scoreboard */
 .scoreboard.container-md {
-  padding: 1rem 2rem;
+  padding: 1rem;
   background-color: var(--pure-white);
   min-height: calc(100vh - 63px);
 }
@@ -622,6 +623,10 @@ img {
     align-items: center;
     gap: 0.5rem;
     margin-top: 30px;
+  }
+
+  .filter {
+    margin: 30px 0 10px;
   }
 
   .scoreboard .match-score {
