--- a/src/App.css
+++ b/src/App.css
@@ -491,7 +491,8 @@ img {
 
 /*Form Input*/
 .form-input {
-  flex-grow: 1;
+  /* flex-grow: 1; */
+  text-align: center;
   font-size: 1.4rem;
   padding: 0.4rem 0.6rem;
   border: none;
