--- a/src/App.css
+++ b/src/App.css
@@ -237,7 +237,6 @@ img {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-  max-width: 100%;
   /* margin: 0.5rem 0; */
 }
 
@@ -491,7 +490,7 @@ img {
 
 /*Form Input*/
 .form-input {
-  /* flex-grow: 1; */
+  flex-grow: 1;
   text-align: center;
   font-size: 1.4rem;
   padding: 0.4rem 0.6rem;
